# signalbrain

./: AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  clean_readme.md  clean_submission.json  index.html  pyproject.toml  server.json  vercel.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: agent-review.yml
.github/workflows/: ci.yml
badge/: titan.json
demo/: demo.sh
docs/: AGENT_BEACON.md  FREE_COMPUTE_RUNBOOK.md  INTEGRITY_BREACH_RUNBOOK.md  RECEIPT_SPEC.md  RELEASE_AND_DISTRIBUTION.md
docs/examples/: measure-commands.md
docs/field-audit/: README.md  agent_trust_audit.py  agent_trust_ledger.jsonl
docs/improvements/: 0593-tooling-pin-adjudication-classifier-standard.md
docs/outreach/: design_partner_email_v1.md
docs/overclaiming-report/: PLAN.md
docs/pilot/: FREE_VS_PILOT.md  GETTING_STARTED.md
examples/modal/: signalbrain_smoke.py
fintech/: signalbrain_dashboard.html
fintech/css/: signalbrain_dashboard.css
notebooks/: signalbrain_free_compute_quickstart.ipynb
report/: DRAFT.md
report/calibration-curves/: README.md  generate.py
scripts/: publish_to_github.sh
spaces/signalbrain-demo/: README.md  app.py  requirements.txt
src/signalbrain/: __init__.py  cli.py  gate.py  guard.py  ledger.py  mcp_server.py  pins.py  receipt.py  report.py  scorer.py
telecom/: index.html
tests/contracts/: conftest.py  test_calibration_merged_score_guard_contract.py  test_calibration_rescore_order_contract.py
tests/package/: test_e2e.py  test_mcp_server.py  test_measure_grammar.py  (+3 more)
tools/: make_badge.py
(+5 files in other folders)
