[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signalbrain"
version = "0.1.2"
description = "Trust layer for AI-modified software — receipts, ledger, calibrated autonomy"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "SignalBrain" }]
keywords = ["ai", "agents", "calibration", "trust", "receipts", "governance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2"]

[project.scripts]
sb = "signalbrain.cli:main"
sb-mcp = "signalbrain.mcp_server:main"
# MCP Registry clients run `uvx --from "signalbrain[mcp]" signalbrain` — the
# executable must match the package name (see server.json).
signalbrain = "signalbrain.mcp_server:main"

[project.urls]
Homepage = "https://signalbrain.ai"
Repository = "https://github.com/whitestone1121-web/signalbrain"
Documentation = "https://github.com/whitestone1121-web/signalbrain/blob/main/docs/RECEIPT_SPEC.md"
Incident = "https://github.com/whitestone1121-web/signalbrain/blob/main/docs/incidents/2026-07-tooling-trust-streak-gaming.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
